tests/fail/not_all_ascii.rs
const ASCII: &ascii::AsciiStr = ascii_literal::ascii_literal!("This is not ASCII! 😢");

fn main(){}